# jjkk

./: Cargo.toml  LICENSE  README.md
src/: app.rs  main.rs
src/config/: settings.rs  theme.rs
src/jj/: log.rs  mod.rs  native_operations.rs  operations.rs  repo.rs  status.rs
src/ui/: layout.rs  mod.rs
src/ui/tabs/: bookmarks.rs  log.rs  mod.rs  working_copy.rs
src/ui/widgets/: diff_view.rs  file_list.rs  mod.rs  popup.rs  status_bar.rs
