[package]
name = "jjkk"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
jj-lib = "0.37.0"
tokio = { version = "1", features = ["full"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
similar = "2.6"
syntect = "5.2"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
