[package]
name = "jjkk"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
jj-lib = "0.37.0"
tokio = { version = "1", features = ["full"] }
ratatui = "0.29.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
similar = "2.6.0"
syntect = "5.2.0"
futures = "0.3.32"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.23"
dirs = "5.0.0"
config = "0.15"
tui-textarea = "0.7.0"

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Allow some pedantic lints that are too noisy
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
too_many_lines = "allow"
unnecessary_wraps = "allow"
